--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@ body nav h1{
     font-family: 'Tangerine';
 }
 
+.Waiting{
+    display: flex;
+    justify-content: center;
+}
+
 .Closer{
     display: flex;
     justify-content: center;
