--- a/style.css
+++ b/style.css
@@ -7,10 +7,10 @@ li{
     list-style: none;
 }
 
-.list-group-items{
+.list-group-item{
     display: flex;
     justify-content: center;
-
+}
 ul{
     list-style: none;
 }
@@ -18,6 +18,7 @@ ul{
 h2{
     font-family: 'Alfa Slab one';
     font-size: 50px;
+    }
    
 .Waiting{
         display: flex;
