--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body nav h1{
 }
 li{
     list-style: none;
+    font-weight: bold;
+    font-size:large;
 }
 
 ul{
@@ -16,10 +18,13 @@ h2{
 .Waiting{
         display: flex;
         justify-content: center;
+        color: white;
     }
     
-.Closer{
+.list-group-item{
         display: flex;
         justify-content: center;
     }
-}
+.button:click{
+    background-color: none;
+ 
