--- a/style.css
+++ b/style.css
@@ -34,6 +34,53 @@ ul{
     list-style: none;
 }
 
+.map-container {
+    display: flex;
+    position: relative;
+    justify-content: center;
+}
+
+.welcome-container {
+    justify-content: center;
+}
+
+#map {
+    display: flex;
+    /* justify-content: center; */
+    left: 40px;
+    position: relative;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+}
+
+
+/* @media only screen and (max-width:319px)  {
+    body {
+        font-size:11px;
+    }
+}
+@media only screen and (min-width:375px) and (max-width:767px)  {
+    body {
+        font-size:12px;
+    } 
+}
+@media only screen and (min-width:768px) and (max-width:1023px)  {
+    body {
+        font-size:14px;
+    } 
+}
+@media only screen and (min-width:1024px) and (max-width:1899px) {
+    body {
+        font-size:16px;
+    } 
+}
+@media only screen and (min-width:1900px) { 
+    body {
+        font-size:18px;
+    } 
+} */
+
 h2{
     font-family: 'Alfa Slab one';
     font-size: 50px;
